--- a/index.html
+++ b/index.html
@@ -1,32 +1,13 @@
-<!DOCTYPE html>
-<html>
+---
+layout: default 
+title: gdcs92
+---
 
-	<head>
-		<title>gdcs92</title>
-	</head>
+<div class="container">
+    <div class="blurb">
 
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm gdcs92!</h1>
-                <p>I'm currently a student at <a href="https://www.ensta-paristech.fr">ENSTA Paristech</a>. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-
-		<footer>
-    		<ul>
-        		<li><a href="mailto:dacosta@ensta.fr">email</a></li>
-        		<li><a href="https://github.com/gdcs92">github.com/gdcs92</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+    	<h1>Hi there, I'm gdcs92!</h1>
+        <p>I'm currently a student at <a href="https://www.ensta-paristech.fr">ENSTA Paristech</a>. <a href="/about">Read more about my life...</a></p>
+	
+    </div><!-- /.blurb -->
+</div><!-- /.container -->
