--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Home
 ---
 
-# Hello, there!
+<h1>Hello, there!</h1>
 
-This is my webpage, in construction.
+<par>This is my webpage in construction.</par>
